@@ -21,27 +21,27 @@ public class Container {
      * 参考博客： https://www.cnblogs.com/youdiaodaxue16/p/9813087.html
      * https://www.cnblogs.com/javaLin/p/8341388.html spring 源码
      */
-    public void scan(Class<?> primarySource) {
-        ClassLoader classloader = Thread.currentThread().getContextClassLoader();
+    public void scan(final Class<?> primarySource) {
+        final ClassLoader classloader = Thread.currentThread().getContextClassLoader();
         Assert.notNull(primarySource, "PrimarySources must not be null");
-        String packageName = primarySource.getPackage().getName();
-        String packagePath = packageName.replace(".", "/");
+        final String packageName = primarySource.getPackage().getName();
+        final String packagePath = packageName.replace(".", "/");
         try {
-            Enumeration<URL> resource = classloader.getResources(packagePath);
+            final Enumeration<URL> resource = classloader.getResources(packagePath);
             while (resource.hasMoreElements()) {
-                URL url = resource.nextElement();
+                final URL url = resource.nextElement();
                 // 仅处理文件型
                 if (url.getProtocol().equals("file")) {
                     scanPackage(url.getFile(), packageName);
                 }
             }
-        } catch (IOException e) {
+        } catch (final IOException e) {
             e.printStackTrace();
         }
 
     }
 
-    public static void run(Class<?> primarySource) {
+    public static void run(final Class<?> primarySource) {
         new Container().scan(primarySource);
     }
 
@@ -49,10 +49,10 @@ public class Container {
      * @param path        文件绝对路径
      * @param packageName 类报名
      */
-    private void scanPackage(String path, String packageName) {
-        File[] fileList = new File(path).listFiles(new FileFilter() {
+    private void scanPackage(String path, final String packageName) {
+        final File[] fileList = new File(path).listFiles(new FileFilter() {
             @Override
-            public boolean accept(File pathName) {
+            public boolean accept(final File pathName) {
                 if (pathName.isDirectory()) {
                     return true;
                 }
@@ -63,43 +63,43 @@ public class Container {
             return;
         }
 
-        for (File file : fileList) {
+        for (final File file : fileList) {
             if (file.isDirectory()) {
                 // 继续扫描文件夹
                 path = file.getAbsolutePath().replace(".", "/");
                 scanPackage(path, packageName + "." + file.getName());
             } else {
-                String fileName = file.getName().replace(".class", "");
+                final String fileName = file.getName().replace(".class", "");
 
-                String className = packageName + "." + fileName;
+                final String className = packageName + "." + fileName;
                 handleClassFile(className);
 
             }
         }
     }
 
-    public void handleClassFile(String name) {
+    public void handleClassFile(final String name) {
         try {
-            Class<?> targetClass = Class.forName(name);
+            final Class<?> targetClass = Class.forName(name);
             if (targetClass.isAnnotationPresent(Component.class)) {
-                for (Annotation annotation : targetClass.getAnnotations()) {
-                    Object object = targetClass.newInstance();
+                for (final Annotation annotation : targetClass.getAnnotations()) {
+                    // fix 过期方法
+                    Object object = targetClass.getDeclaredConstructor().newInstance();
                     System.out
                             .println("注解 type:" + annotation.annotationType().toString() + " " + targetClass.getName());
-                    Field[] fields = targetClass.getDeclaredFields();
+                    final Field[] fields = targetClass.getDeclaredFields();
 
                     System.out.println("length:" + fields.length);
 
-                    for (Field field : fields) {
+                    for (final Field field : fields) {
                         field.setAccessible(true);
                         System.out.println("field:" + field);
                         System.out.println("设置field 000" + field.isAnnotationPresent(Autowired.class));
                         if (field.isAnnotationPresent(Autowired.class)) {
                             System.out.println("设置field 1111" + " " + field.getType().getClass().toString());
-                            // if(field.getType().getClass().equals("class java.lang.Class")){
                             System.out.println("设置field 2222");
                             field.set(object, "hello world");
-                            // }
+
                         }
                     }
                     System.out.println("field over" + ((ArraySolution) object).getTestField());
@@ -109,19 +109,20 @@ public class Container {
                     System.out.println(beanMap);
                 }
             }
-        } catch (ClassNotFoundException e) {
+        } catch (final ClassNotFoundException e) {
             e.printStackTrace();
-        } catch (InstantiationException e) {
-            e.printStackTrace();
-
-        } catch (IllegalAccessException e) {
+        } catch (final InstantiationException e) {
             e.printStackTrace();
 
+        } catch (final IllegalAccessException e) {
+            e.printStackTrace();
+        } catch (Exception e) {
+            e.printStackTrace();
         }
 
     }
 
-    public static Object getBean(String name) {
+    public static Object getBean(final String name) {
         return beanMap.get(name);
     }
 }
